# b3_drp

./: .gitignore  README.md  admin.sh  design_brief.typ  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  conf2.yaml  config.yaml  config_quad.yaml  example_quad_workflow.py  example_workflow.py  matdb.json  prog_matdb.json  programmatic_example.py
src/b3_drp/: __init__.py
src/b3_drp/cli/: __init__.py  cli.py  main.py
src/b3_drp/core/: __init__.py  assign.py  drp_step.py  models.py  plotting.py
src/b3_drp/utils/: helpers.py
tests/: __init__.py  test_assign.py  test_cli.py  test_drp_step.py  test_example_quad_workflow.py  test_example_workflow.py  test_plotting.py  test_programmatic_example.py
