[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b3_drp"
version = "0.1.0"
description = "Library for assigning composite material plies to FEA model elements"
authors = [{name = "wr1", email = "8971152+wr1@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pyvista",
    "pandas",
    "pyyaml",
    "pydantic",
    "treeparse",
    "matplotlib",
    "rich",
]

[project.scripts]
b3_drp = "b3_drp.cli.cli:main"

[tool.uv]
[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "--cov=b3_drp"