[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b3_drp"
version = "0.1.1"
description = "Library for assigning composite material plies to FEA model elements"
authors = [{name = "wr1"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pyvista",
    "pandas",
    "pyyaml",
    "pydantic",
    "treeparse",
    "matplotlib",
    "statesman @ git+https://github.com/wr1/statesman",
    "rich",
]

[project.scripts]
b3_drp = "b3_drp.cli.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "mkdocs",
    "mkdocs-material",
]

[tool.ruff]
line-length = 88

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "--cov=b3_drp"
